--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
   - "4.4.5"
-before_install: npm install -g grunt-cli
+before_install: 
+	npm install -g grunt-cli
+	npm install -g bower
 install: npm install
 before_script: grunt build
 
