--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,5 @@
-# First attempt at installing onto Cloud Foundry ... :)
-
 applications:
-- name: my-static-site
+- name: petstore-ui
   memory: 64M
     buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
   path : dist
