Checkin after successful deployment to nginx in CF.

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 applications:
 - name: petstore-ui
   memory: 64M
-    buildpack: https://github.com/cloudfoundry/staticfile-buildpack.git
   path : dist
+  buildpack: staticfile_buildpack
